don't use development mode as default

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,8 +17,8 @@ build_flags =
   -DDEBUG
   -DCREATE_DEV_EUI_RANDOM
 ;  -DCREATE_DEV_EUI_CHIPID
-  -DDEVELOPMENT_MODE
-  -DDEVELOPMENT_SLEEPTIME_VALUE=120000
+;  -DDEVELOPMENT_MODE
+;  -DDEVELOPMENT_SLEEPTIME_VALUE=120000
 
 upload_speed = 460800
 monitor_speed = 115200
