BME280 sensor added

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-  default_envs = cubecell_board_v2
+  default_envs = cubecell_board
 
 [common]
 platform = heltec-cubecell @ 1.1.0
@@ -15,10 +15,12 @@ build_flags =
   -ULoraWan_RGB
   -DREGION_EU868
   -DDEBUG
+  -DHAS_BME280
+  -DBMP280_DEBUG_PRINT
   -DCREATE_DEV_EUI_RANDOM
 ;  -DCREATE_DEV_EUI_CHIPID
-;  -DDEVELOPMENT_MODE
-;  -DDEVELOPMENT_SLEEPTIME_VALUE=120000
+  -DDEVELOPMENT_MODE
+  -DDEVELOPMENT_SLEEPTIME_VALUE=120000
 
 upload_speed = 460800
 monitor_speed = 115200
