--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,7 @@ framework = arduino
 
 build_flags = 
   -Iprivate -Iconfig
-  -DAPP_VERSION=\"2.0.1\"
+  -DAPP_VERSION=\"2.0.2\"
   -UAT_SUPPORT
   -DLORAWAN_AT_SUPPORT=OFF
   -ULoRa
@@ -19,8 +19,9 @@ build_flags =
   -DBMP280_DEBUG_PRINT
   -DCREATE_DEV_EUI_RANDOM
 ;  -DCREATE_DEV_EUI_CHIPID
-  -DDEVELOPMENT_MODE
-  -DDEVELOPMENT_SLEEPTIME_VALUE=120000
+;  -DDEVELOPMENT_SLEEPTIME_VALUE=120000
+  -DSENSOR_READ_ITERATIONS=20
+  -DSENSOR_READ_ITERATION_DELAY=1000
 
 upload_speed = 460800
 monitor_speed = 115200
